--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -192,7 +192,7 @@ function on() {
   	document.getElementById("overlaytableTD7").innerHTML = valueTD7;
   	document.getElementById("overlaytableTD8").innerHTML = valueTD8;
   	document.getElementById("overlayIMG").innerHTML = "<img width='200' alt='can't download' src='data:image/jpeg;base64,"+ valueIMG +"'>";
-  	document.getElementById("overlayconfirm").href="/trantopacking/"+valueLink;
+  	document.getElementById("overlayconfirm").href="/trantotracking/"+valueLink;
 }
 
 function off() {
@@ -215,7 +215,6 @@ function offdetail() {
 	<div class="center" id="overlaydetail" onclick="offdetail()">
 		<div class="checked center">
 			<div class="overlayheader center">รายละเอียดเพิ่มเติม </div>
-			s
 		</div>
 	</div>
 	<div class="center" id="overlay" onclick="off()">
