delete detaill checking

--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -281,7 +281,7 @@ function offdetail() {
 							<span th:text="${' x'+ orderlist.getNumber()}"></span>
 			  			</li>
 					</ul>
-					<a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a>
+					<!-- <a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a> -->
 				</td>
 				<td th:text="${userorder.getSellerBank()}" id="valueTD6"></td>
 				<td th:text="${userorder.getPayTime()}" id="valueTD7"></td>
