--- a/src/main/resources/templates/transfercomplete.html
+++ b/src/main/resources/templates/transfercomplete.html
@@ -227,7 +227,8 @@ function offdetail() {
 					</ul>
 					<a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a>
 			</td>
-			<td>ได้รับแล้ว </td>
+			<td th:if="${userorder.getStatus().equalsIgnoreCase('shipping')}">กำลังขนส่ง</td>
+			<td th:if="${userorder.getStatus().equalsIgnoreCase('complete')}">ได้รับแล้ว</td>
 			<input type="hidden" th:value="${userorder.getTotalOrder()}" id="valueTD5">
 			<input type="hidden" th:value="${userorder.getUserprofile().getAddress()}" id="valueTD6">
 			<input type="hidden" th:value="${userorder.getTrack()}" id="valueTD7">
