--- a/src/main/resources/templates/transfertrack.html
+++ b/src/main/resources/templates/transfertrack.html
@@ -28,7 +28,7 @@ body{
 }
 
 
-.sellerheader{
+.sellerheader {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -39,8 +39,15 @@ body{
 	width: 100%;
 	box-shadow: 2px 2px 5px gray;
 }
+.tabheadersecond {
+	padding: 2%;
+	position: fixed;
+	top: 60px;
+	left: 0;
+	width: 100%;
+}
 details {
-	margin-top: 60px;
+	margin-top: 100px;
 	width: 100%;
 	border: 2px gray solid;
 }
@@ -272,6 +279,14 @@ function offdetail() {
 				</tr>
 			</table>
 		</div>
+	</div>
+	<div class="tabheadersecond">
+		<select>
+			<option>ไปรษณีย์ไทย</option>
+			<option>EMS</option>
+			<option>KERRY</option>
+		</select>
+		<a href="#">ปริ๊นชื่อ-ที่อยู่ผู้ซื้อทั้งหมด</a>
 	</div>
 	<details>
 		<summary>กันยายน 2563</summary>
