--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -9,7 +9,9 @@
   --brown: #cbaf87;
   --x: #c7b198;
   --brown2: #f4ebc1;
+  --browntab: #e8cca3;
   --green: #79d70f;
+  --grey: #707070;
 }
 
 body{
@@ -45,7 +47,42 @@ body{
 	color: white;
 	font-size: 20pt;
 	box-shadow: 2px 2px 5px gray;
+	z-index: 999;
 }
+.tabheader{
+	position: fixed;
+	top: 60px;
+	left: 0;
+	height: 30pt;
+	width: 100%;
+	background-color: var(--browntab);
+	box-shadow: 2px 2px 5px gray;
+	display: flex;
+	z-index: 900;
+}
+.tabheader a{
+	display: block;
+    width: 100px;
+    height: 30pt;
+    text-decoration: none;
+    text-align: center;
+    color: var(--grey);
+    font-weight: bold;
+    line-height: 30pt;
+}
+
+#selected{
+	display: block;
+    width: 100px;
+    height: 30pt;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    line-height: 30pt;
+	background-color: var(--grey);
+}
+
 a.catheader{
 	text-decoration: none;
 	background-color: var(--brown);
@@ -84,7 +121,7 @@ a.catdelete:hover{
 	border: outset 1pt white;
 }
 .tablecat{
-	margin: 60pt 10% 0 10%;
+	margin: 80pt 10% 0 10%;
 	width: 100%;
 	background-color: white;
 }
@@ -129,6 +166,13 @@ font-family: 'Bai Jamjuree', sans-serif;
 	<a class="cataddheader" href="/addcategory">+</a>
 </div>
 <a class="back" href="/firstpage"><</a>
+<div class="tabheader">
+	<a id="selected" href="#editproduct">แก้ไขสินค้า</a>
+	<a href="#transfercheck">ตรวจสอบ</a>
+	<a href="#transfertrack">ต้องจัดส่ง</a>
+	<a href="#transfercomplete">จัดส่งแล้ว</a>
+	<a href="#transferremove">สินค้าที่ยกเลิก</a>
+</div>
 <table class="tablecat">
 	<!-- <tr>
 		<td>
