--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -8,7 +8,7 @@
 :root {
   --brown: #cbaf87;
   --x: #c7b198;
-  --brown2: #f4ebc1;
+  --brownbg: #f4ebc1;
   --browntab: #e8cca3;
   --green: #79d70f;
   --grey: #707070;
@@ -19,7 +19,7 @@ body{
 	height: 100vh;
 	margin: 0;
 	display: flex;
-	background-color: var(--brown2);
+	background-color: var(--brownbg);
 }
 
 .center{
