--- a/src/main/resources/templates/transfercomplete.html
+++ b/src/main/resources/templates/transfercomplete.html
@@ -185,10 +185,12 @@ function offdetail() {
 				</tr>
 				<tr>
 					<td>รายการ </td>
-					<td>ราคา </td>
+					<td>จำนวน</td>
+					<td>ราคา (ต่อชิ้น) </td>
 				</tr>
-				<tr id="overlaytableTD4"> <!-- each -->
+				<tr id="overlaytableTD4">
 					<td>รายการ </td>
+					<td>จำนวน</td>
 					<td>ราคา </td>
 				</tr>
 				<tr>
