--- a/src/main/resources/templates/transfertrack.html
+++ b/src/main/resources/templates/transfertrack.html
@@ -283,7 +283,7 @@ function offdetail() {
 		</div>
 	</div>
 	<div class="tabheadersecond">
-		<a href="#">ปริ๊นชื่อ-ที่อยู่ผู้ซื้อทั้งหมด</a>
+		<a href="/createPDF">ปริ๊นชื่อ-ที่อยู่ผู้ซื้อทั้งหมด</a>
 	</div>
 	<details>
 		<summary>กันยายน 2563</summary>
