--- a/src/main/resources/templates/transfercheck.html
+++ b/src/main/resources/templates/transfercheck.html
@@ -257,8 +257,8 @@ function offdetail() {
 			</div>
 		</div>
 	</div>
-	<details>
-		<summary>กันยายน 2563</summary>
+	<details th:each="day : ${daylist}">
+		<summary th:text="${day.getMixname()}" th:value="${day.getMixname()}"></summary>
 		<table class="maintable">
 			<tr class="tableheader">
 				<th style="height:30pt; width: 10%" > รหัสสั่งซื้อ </th>
@@ -269,7 +269,7 @@ function offdetail() {
 				<th style="height:30pt; width: 10%">จำนวนเงินที่โอนมา</th>
 				<th style="height:30pt; width: 10%">ตรวจสอบ </th>
 			</tr>
-			<tr th:each="userorder: ${userorders}">
+			<tr th:each="userorder: ${userorders}" th:if="${userorder.getPayTime().toLocalDate().isEqual(day.getLocaldate())}">
 				<td th:text="${'#'+ userorder.getIdOrder()}" id="valueTD1"></td>
 				<td style="position: relative;" >
 					<ul>
